# drip-admin-vue

./: .gitignore  AGENTS.md  README.md  backend-project-checklist.md  backend-system-design-prompt-template.md  frontend-admin-system-design-prompt-template.md  frontend-project-checklist.md  mobile-admin-system-design-prompt-template.md  mobile-project-checklist.md
backend-python/: README.md  config.yaml  pyproject.toml  requirements.txt  setup.sh  start.sh
backend-python/app/: __init__.py  main.py
backend-python/app/common/: __init__.py  api_response.py  errors.py  export.py  id.py  pagination.py  password.py
backend-python/app/config/: settings.py
backend-python/app/infrastructure/: __init__.py  database.py  file_storage.py  logging_config.py  operation_logging.py  redis_client.py  request_logging.py  script_executor.py
backend-python/app/modules/system/: __init__.py  router.py
backend-python/app/modules/system/controller/: __init__.py  auth_controller.py  common_controller.py  config_controller.py  dept_controller.py  dict_controller.py  file_controller.py  job_controller.py  log_controller.py  menu_controller.py  online_user_controller.py  print_template_controller.py  role_controller.py  user_controller.py
backend-python/app/modules/system/dto/: __init__.py  auth_request.py  config_request.py  dept_request.py  dict_request.py  (+5 more)
backend-python/tests/: test_contract.py
backend-rust/: Cargo.toml  README.md  config.yaml  start.sh
backend-rust/src/: lib.rs  main.rs
backend-rust/src/common/: errors.rs  export.rs  id.rs  mod.rs  pagination.rs  password.rs  response.rs
backend-rust/src/config/: mod.rs
backend-rust/src/infrastructure/: database.rs  file_storage.rs  logging.rs  mod.rs  redis_client.rs  script_executor.rs
backend-rust/src/modules/system/: api_doc.rs  mod.rs  router.rs  state.rs
backend-rust/tests/: contract_tests.rs
(+539 files in other folders)
