[project]
name = "drip-admin-backend-python"
version = "0.1.0"
description = "Python implementation of the Drip Admin API contract"
requires-python = ">=3.11"
dependencies = [
  "asyncmy>=0.2.10",
  "fastapi>=0.115,<1.0",
  "openpyxl>=3.1",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "PyYAML>=6.0",
  "redis>=5.2,<6.0",
  "SQLAlchemy>=2.0.36,<3.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.8,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
